--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 	<footer class="main" id="f1">
 		<a href="http://es.wikipedia.org/wiki/Quiz">
 		¿Que es un Quiz?</a>
+		- <a href="https://github.com/miketnt/quiz2015">El código en Github</a>
 	</footer>
   </div>
   </body>
