Lista de preguntas

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,3 @@
-<p>Respuesta: <%= respuesta %></p>
-<a href="/quizes/question"> Intentenlo otra vez </a>
+<p>Respuesta: <%= respuesta %>
+<a href="/quizes/<%= quiz.id %>">Volver</a>
+</p>
