Añadir un buscador de preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -13,5 +13,13 @@
 		</td>
 	</tr>
 <% } %>
+	<tr>
+		<td colspan="4"><a href="/quizes/new"><button type="button">Crear pregunta</button></a></td>
+	</tr>
+	<tr>
+		<form method="get" action="quizes">
+			<td colspan="2"><input type="text" name="search"></td>
+			<td colspan="2"><button type="submit">Buscar pregunta</button></td>
+		</form>
+	</tr>
 </table><p>
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
