--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,19 +3,23 @@
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %><a/></td>
 		<td>(<%= quizes[i].tema %>)</td>
-		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button><a/></td>
-		<td>
-			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-					borrar
-				</button>
-			</form>
-		</td>
+		<% if (session.user) { %>
+			<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button><a/></td>
+			<td>
+				<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+					<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+						borrar
+					</button>
+				</form>
+			</td>
+		<% } %>
 	</tr>
 <% } %>
-	<tr>
-		<td colspan="4"><a href="/quizes/new"><button type="button">Crear pregunta</button></a></td>
-	</tr>
+	<% if (session.user) { %>
+		<tr>
+			<td colspan="4"><a href="/quizes/new"><button type="button">Crear pregunta</button></a></td>
+		</tr>
+	<% } %>
 	<tr>
 		<form method="get" action="quizes">
 			<td colspan="2"><input type="text" name="search"></td>
